[package]
name = "routerify-query"
version = "4.0.0"
description = "A Routerify middleware which parses the request query string."
homepage = "https://github.com/routerify/routerify-query"
repository = "https://github.com/routerify/routerify-query"
keywords = ["routerify", "hyper-rs", "hyper", "middleware", "querystring"]
categories = ["asynchronous", "web-programming", "web-programming::http-server"]
authors = ["Rousan Ali <hello@rousan.io>"]
readme = "README.md"
license = "MIT"
edition = "2018"

[dependencies]
bytes = "1"
routerify = "4"
hyper = { version = "1.0.0-rc.3", features = ["http1", "http2", "server", "client"] }
http-body = "=1.0.0-rc.2"
http-body-util = { version = "=0.1.0-rc.2" }
url = "2.2"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[patch.crates-io]
routerify = { git = "https://github.com/igorzi/routerify", rev = "11b4186fdfe412c5e4f75786022a4b164d3af446" }